--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ let p5 = list[Math.floor(Math.random() * list.length)];
 list.splice(list.indexOf(p5), 1);
 let p6 = list[Math.floor(Math.random() * list.length)];
 list.splice(list.indexOf(p6), 1);
-let p7 = list[Math.floor(Math.random() * list.length-1)];
+let p7 = list[Math.floor(Math.random() * list.length)];
 console.log(list, p1, p2, p3, p4, p5, p6, p7);
 let pog = 0;
 if (n1.value == p1) { pog++; z1.style.color = "lightblue"; k1.style.color = "lightblue"; }
