--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@ justify-content: center;
 }
 #end div h3 {
 width: 2.5rem;
-height: 2.5rem;
+height: 2.2rem;
 margin: 1rem 0.4rem;
 background-color: #2b2b2b;
 color: white;
 border: none;
 border-radius: 10px;
 text-align: center;
-padding-top: 0.5rem;
+padding-top: 1rem;
 }
 #zarada {
 margin: 1rem 0;
@@ -87,7 +87,8 @@ font-weight: bold;
 width: 90%;
 height: 2.8rem;
 font-size: 1.5rem;
-background-color: #2b2b2b;
+background-color: rgba(255, 255, 255, 0.3);
+backdrop-filter: blur(30px);
 margin: 0 1.2rem 1.5rem 1.2rem;
 border-radius: 0 0 25px 25px;
 }
