--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@ list.splice(list.indexOf(p6), 1);
 let p7 = list[Math.floor(Math.random() * list.length)];
 console.log(list, p1, p2, p3, p4, p5, p6, p7);
 let pog = 0;
-if (n1.value == p1) { pog++; z1.style.color = "lightblue"; k1.style.color = "lightblue"; }
-if (n2.value == p2) { pog++; z2.style.color = "lightblue"; k2.style.color = "lightblue"; }
-if (n3.value == p3) { pog++; z3.style.color = "lightblue"; k3.style.color = "lightblue"; }
-if (n4.value == p4) { pog++; z4.style.color = "lightblue"; k4.style.color = "lightblue"; }
-if (n5.value == p5) { pog++; z5.style.color = "lightblue"; k5.style.color = "lightblue"; }
-if (n6.value == p6) { pog++; z6.style.color = "lightblue"; k6.style.color = "lightblue"; }
-if (n7.value == p7) { pog++; z7.style.color = "lightblue"; k7.style.color = "lightblue"; }
+if (n1.value == p1) { pog++; z1.style.color = "#00FFFF"; k1.style.color = "#00FFFF"; }
+if (n2.value == p2) { pog++; z2.style.color = "#00FFFF"; k2.style.color = "#00FFFF"; }
+if (n3.value == p3) { pog++; z3.style.color = "#00FFFF"; k3.style.color = "#00FFFF"; }
+if (n4.value == p4) { pog++; z4.style.color = "#00FFFF"; k4.style.color = "#00FFFF"; }
+if (n5.value == p5) { pog++; z5.style.color = "#00FFFF"; k5.style.color = "#00FFFF"; }
+if (n6.value == p6) { pog++; z6.style.color = "#00FFFF"; k6.style.color = "#00FFFF"; }
+if (n7.value == p7) { pog++; z7.style.color = "#00FFFF"; k7.style.color = "#00FFFF"; }
 let zaradaa = "";
 if (pog == 0) { zaradaa = "0€"; }
 if (pog == 1) { zaradaa = "100€"; }
