--- a/index.html
+++ b/index.html
@@ -3,20 +3,11 @@
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vortex Assets</title>
-
-<style>
-* {
-margin: 0;
-padding: 0;
-text-align: center;
-background-color: black;
-color: white;
-}
-</style>
+<link rel="stylesheet" href="style.css">
+<title>Dejan Sarac</title>
 
 </head>
 <body>
-<h1>VORTEX ASSETS</h1>
+<h1>Dejan Sarac je peder iz Resavice!</h1>
 </body>
 </html>
