--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div style="grid-column: 1;">
             <h1>Dejan Šarac</h1>
             <div id="neon">
-                <p>Dejan Šarac je nacionalni borac za prava LQBTQ populacije u Republici Srbiji. Rodjen je 2007. godine u opštini Despotovac. Pohadjao je osnovnu školu "Vuk Karadžić" u Resavici i Tehničku školu u Ćupriji. Strast i bliskost prema istopolnim osobama je razvio u ranom pubertetu nakon koga je krenuo aktivno da se bavi proučavanjem istopolnih medjuljudskih konekcija.</p>
+                <p>Dejan Šarac je nacionalni borac za prava LGBTQ populacije u Republici Srbiji. Rodjen je 2007. godine u opštini Despotovac. Pohadjao je osnovnu školu "Vuk Karadžić" u Resavici i Tehničku školu u Ćupriji. Strast i bliskost prema istopolnim osobama je razvio u ranom pubertetu nakon koga je krenuo aktivno da se bavi proučavanjem istopolnih medjuljudskih konekcija.</p>
             </div>
         </div>
         <div id="info" style="grid-column: 2;">
@@ -45,6 +45,7 @@
     </div>
 </body>
 </html>
+
 
 
 
